--- a/Views/FinanceStatements/Details.cshtml
+++ b/Views/FinanceStatements/Details.cshtml
@@ -11,14 +11,14 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Year)
+            @Html.DisplayNameFor(model => model.TransactionDate)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Year)
+            @Html.DisplayFor(model => model.TransactionDate)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.StatementId">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
