--- a/Views/FinanceStatements/Index.cshtml
+++ b/Views/FinanceStatements/Index.cshtml
@@ -13,7 +13,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Year)
+                @Html.DisplayNameFor(model => model.TransactionDate)
             </th>
             <th></th>
         </tr>
@@ -22,12 +22,12 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Year)
+                @Html.DisplayFor(modelItem => item.TransactionDate)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.StatementId">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.StatementId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.StatementId">Delete</a>
             </td>
         </tr>
 }
