--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -69,3 +69,14 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.jexcel{
+  font-size: 12px;
+}
+
+.jexcel > tbody > tr > td:not(:nth-child(1)):not(:nth-child(2)){
+  text-align: right!important;
+}
+.jexcel > thead > tr > td{
+  font-weight: bold!important;
+}
