--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using FinResearch
 @using FinResearch.Models
+@using FinResearch.Models.AccountViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
