--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -5,11 +5,11 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
-        <ul class="nav navbar-nav navbar-right">
-            <li>
+        <ul class="nav navbar-right">
+            <li class="nav-item">
                 <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
             </li>
-            <li>
+            <li class="nav-item">
                 <button type="submit" class="btn btn-link navbar-btn navbar-link">Log out</button>
             </li>
         </ul>
@@ -17,8 +17,8 @@
 }
 else
 {
-    <ul class="nav navbar-nav navbar-right">
-        <li><a asp-area="" asp-controller="Account" asp-action="Register">Register</a>&nbsp;&nbsp;</li>
-        <li><a asp-area="" asp-controller="Account" asp-action="Login">Log in</a></li>
-    </ul>
+<ul class="nav navbar-right">
+    <li class="nav-item"><a asp-area="" asp-controller="Account" asp-action="Register">Register</a>&nbsp;&nbsp;</li>
+    <li class="nav-item"><a asp-area="" asp-controller="Account" asp-action="Login">Login</a></li>
+</ul>
 }
